# soemind-forge

./: .env.example  .gitignore  AGENT-GUIDE.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  GETTING-STARTED.md  LICENSE  README.md  RULES.md  USER_GUIDE.md  package-lock.json  package.json  setup.bat  setup.sh  test-all-workflows.js
desktop/: README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: CNAME  index.html  index.my.html  index.th.html  robots.txt  showcase.html  showcase.my.html  showcase.th.html  sitemap.xml
gemini/: AGENT_TOOL_SPEC.md  GETTING_STARTED.md  README.md  USAGE.md  ai-usage-tracker.ts  cost-calculator.ts  gemini-provider.ts  index.ts  package-lock.json  package.json  pricing.json  tool-schema.json  tsconfig.json  types.ts
openrouter/: cost-calculator.ts  index.ts  openrouter-provider.ts  pricing.json  types.ts
remotion/: package-lock.json  package.json
skills/: README.md
templates/: ASSETS-GUIDE.md  README.md  assets.config.template.yaml  audio-slides-content.template.md  brand.template.md  carousel-content.template.md  content-calendar.template.md  content-requirements.md  image-content.template.md  project.template.md  style-block.template.md  style-samples-README.md  text-content.template.md  video-content.template.md
workflows/: BRAND-ASSETS-GUIDE.md  CREATING_WORKFLOWS.md  IMAGE-PROMPT-GUIDE.md  MANIFEST-GUIDE.md  PLATFORM-SPECS.md  PRODUCT-SHOT-GUIDE.md  README.md  cli.cjs  (+20 more)
(+79 files in other folders)
